--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 <body>
     <!-- サイドバー -->
@@ -38,7 +38,7 @@
                 <button><i class="fas fa-globe"></i> Language</button>
                 <a href="TOPpage.html">
                     <div class="profile-icon">
-                        <img src="icon1.jpg" alt="Profile">
+                        <img src="image/icon1.jpg" alt="Profile">
                     </div>
                 </a>
                 
@@ -60,7 +60,7 @@
                     <li><i class="fas fa-paper-plane"></i><b>【買取オファー】→</b></li>
                     <p>上から10つ目のサンロックフェスをクリック！<br>すでに、売り切れている公演のチケットを持つユーザーに買取オファーを送信できます。NFTのおかげで、１次取引から、N次取引まで同時に行えるプラットフォームが実現。</p>
                     </ul>
-                    <img src="nftticket.jpg" style="width: 100%; height: auto; margin-top: 20px;">
+                    <img src="image/nftticket.jpg" style="width: 100%; height: auto; margin-top: 20px;">
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <div class="events-grid">
                 <!-- チケットアイテム -->
                 <div class="ticket-card">
-                    <img src="ticket1.png" alt="Event 1">
+                    <img src="image/ticket1.png" alt="Event 1">
                     <div class="ticket-info">
                         <p class="ticket-title">舞台「ちゃりんこ BOYS」</p>
                         <p class="ticket-location">帝国劇場</p>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket2.png" alt="Event 2">
+                    <img src="image/ticket2.png" alt="Event 2">
                     <div class="ticket-info">
                         <p class="ticket-title">CHRISTMAS CONCERT 2024</p>
                         <p class="ticket-location">東京ドーム</p>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket3.png" alt="Event 3">
+                    <img src="image/ticket3.png" alt="Event 3">
                     <div class="ticket-info">
                         <p class="ticket-title">CHRISTMAS DINNER SHOW!</p>
                         <p class="ticket-location">プリンスホテル</p>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket4.png" alt="Event 4">
+                    <img src="image/ticket4.png" alt="Event 4">
                     <div class="ticket-info">
                         <p class="ticket-title">New Year Concert 2025</p>
                         <p class="ticket-location">京セラドーム</p>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket5.png" alt="Event 5">
+                    <img src="image/ticket5.png" alt="Event 5">
                     <div class="ticket-info">
                         <p class="ticket-title">Zepp Dance Tour</p>
                         <p class="ticket-location">Zepp Nagoya...</p>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="ticket-card" onclick="toggleDetails(this)">
-                    <img src="ticket6.png" alt="Event 6">
+                    <img src="image/ticket6.png" alt="Event 6">
                     <div class="ticket-info">
                         <p class="ticket-title">FIRST DOME TOUR「FIVE★STARS」</p>
                         <p class="ticket-location">PayPayドーム...</p>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="ticket-details" style="display: none;">
                         <div class="event-header">
-                            <img src="ticket6.png" alt="Event 6" class="event-logo">
+                            <img src="image/ticket6.png" alt="Event 6" class="event-logo">
                             <h3 class="event-title">FIRST DOME TOUR「FIVE★STARS」</h3>
                         </div>
                         <div class="event-description">
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket7.png" alt="Event 7">
+                    <img src="image/ticket7.png" alt="Event 7">
                     <div class="ticket-info">
                         <p class="ticket-title">10 annyversary tour「WAKUWAKU WORLD」</p>
                         <p class="ticket-location">真駒内アリーナ...</p>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket8.png" alt="Event 8">
+                    <img src="image/ticket8.png" alt="Event 8">
                     <div class="ticket-info">
                         <p class="ticket-title">「FUN FUN FUN」ファンミーティング</p>
                         <p class="ticket-location">インテックス大阪...</p>
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket9.png" alt="Event 9">
+                    <img src="image/ticket9.png" alt="Event 9">
                     <div class="ticket-info">
                         <p class="ticket-title">TALKing PARTY ～RABBIT CANDYとお話し会～</p>
                         <p class="ticket-location">東京某所</p>
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket10.png" alt="Event 10">
+                    <img src="image/ticket10.png" alt="Event 10">
                     <div class="ticket-info">
                         <p class="ticket-title">3rd arena tour「Precious One」</p>
                         <p class="ticket-location">さいたまスーパーアリーナ</p>
@@ -206,7 +206,7 @@
                     </div>
                 </div>
                 <div class="ticket-card">
-                    <img src="ticket11.png" alt="Event 11">
+                    <img src="image/ticket11.png" alt="Event 11">
                     <div class="ticket-info">
                         <p class="ticket-title">ミュージカル「Romeo & Juliet」 </p>
                         <p class="ticket-location">梅田芸術劇場...</p>
@@ -214,7 +214,7 @@
                     </div>
                 </div>
                 <div class="ticket-card" onclick="toggleDetails(this)">
-                    <img src="ticket12.png" alt="Event 12">
+                    <img src="image/ticket12.png" alt="Event 12">
                     <div class="ticket-info">
                         <p class="ticket-title">サンロックフェス</p>
                         <p class="ticket-location">太陽公園</p>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="ticket-details" style="display: none;">
                         <div class="event-header">
-                            <img src="ticket12.png" alt="Event 12" class="event-logo">
+                            <img src="image/ticket12.png" alt="Event 12" class="event-logo">
                             <h3 class="event-title">サンロックフェス</h3>
                         </div>
                         <div class="event-description">
@@ -289,7 +289,7 @@
                         </div>
                         <div class="button-container">
                             <button class="buy-button">購入</button>
-                            <img src="pop_sold_out.png" alt="ソールドアウト" class="sold-out-logo">
+                            <img src="image/pop_sold_out.png" alt="ソールドアウト" class="sold-out-logo">
                             <button class="apply-button" onclick="openBuyOfferModal()">買取オファー</button>
                         </div>  
                     </div>
@@ -298,6 +298,6 @@
         </section>
 
     </div>
-    <script src="script1101.js" defer></script>
+    <script src="js/script1101.js" defer></script>
 </body>
 </html>
