--- a/SetUp.html
+++ b/SetUp.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="setup.css"> 
+    <link rel="stylesheet" href="css/setup.css"> 
 </head>
 <body>
     <header>
@@ -95,7 +95,7 @@
                     <button type="submit" class="submit-button" id="showImageButton">連携に進む</button>
                 </div>
                 <div id="imageModal">
-                    <img src="mynumber.jpg" alt="マイナンバー画像">
+                    <img src="image/mynumber.jpg" alt="マイナンバー画像">
                     <!-- 戻るボタン -->
                     <button type="submit" class="back-button" id="closeModal">戻る</button>
                 </div>
@@ -105,7 +105,7 @@
                     <label for="terms">登録にあたってPipPopPassの利用規約およびプライバシーポリシーに同意します</label>
                 </div>
 
-                <button type="submit" class="submit-button" onclick="location.href='file:///C:/Users/cinna/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/PipPopPass/TOPpage.html'">登録</button>
+                <button type="submit" class="submit-button" onclick="location.href='file:///C:/Users/cinna/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/PPP/PPP/TOPpage.html'">登録</button>
             </form>
 
             <!-- ログインページへのリンク -->
