--- a/TOPpage.html
+++ b/TOPpage.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Candal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="TOPpage.css">
+    <link rel="stylesheet" href="css/TOPpage.css">
 </head>
 <body>
     <!-- サイドバー -->
@@ -103,9 +103,9 @@
         <main class="p-4 -24">
             <div class="profile-card">
                 <div class="flex items-center gap-4 mb-6">
-                    <img src="banner1.avif" alt="プロフィールバナー画像" class="banner-image"/>
+                    <img src="image/banner1.avif" alt="プロフィールバナー画像" class="banner-image"/>
                     <div>
-                        <img src="icon1.jpg" alt="プロフィール画像" class="icon-image"/>
+                        <img src="image/icon1.jpg" alt="プロフィール画像" class="icon-image"/>
                         <h2>〇△ロ</h2><p class="text-gray-600">@Oleo^_^cat</p>
                     </div>
                     <button mtclass="right-button">プロフィールを編集する</button>
@@ -123,7 +123,6 @@
             </div>
         </main>
     </div>
-    <script src="script1101.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+    <script src="js/script1101.js"></script>
 </body>
 </html>
