--- a/SetUp.html
+++ b/SetUp.html
@@ -105,7 +105,7 @@
                     <label for="terms">登録にあたってPipPopPassの利用規約およびプライバシーポリシーに同意します</label>
                 </div>
 
-                <button type="submit" class="submit-button" onclick="location.href='file:///C:/Users/cinna/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/PPP/PPP/TOPpage.html'">登録</button>
+                <button type="submit" class="submit-button" onclick="location.href='https://chu8rin.github.io/PPP/TOPpage.html'">登録</button>
             </form>
 
             <!-- ログインページへのリンク -->
